fix: fix visual bug with bg color bleeding from submit buttons

--- a/aboveboard/static/css/style.css
+++ b/aboveboard/static/css/style.css
@@ -210,12 +210,12 @@ label[for="description"] {
     background-color: #dddddd;
 }
 
-.submit-btn {
+.hero-btn {
     background-color: #ffff00;
     color: black;
 }
 
-.submit-btn:hover {
+.hero-btn:hover {
     background-color: rgba(255, 255, 0, .75);
 }
 
